# devabase

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  devabase.toml  docker-compose.yml
docs/assets/: system_demo (1).gif:Zone.Identifier  system_demo (4).gif:Zone.Identifier
landing/: docs.html  index.html
migrations/: 001_init.sql  002_fts_indexes.sql  003_evaluation_tables.sql  004_knowledge_graph.sql  005_fix_entity_graph.sql  006_benchmarks.sql  007_app_auth.sql  008_api_key_active.sql  009_document_uploaded_status.sql
scripts/: init-demo.sh  init-demo.ts  init-sample-data.sh  reset-db.sh  sample-data.sql
sdk/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/src/: index.ts
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: app_auth.rs  auth.rs  benchmarks.rs  cache.rs  chunks.rs  collections.rs  conversations.rs  documents.rs  evaluation.rs  files.rs  health.rs  keys.rs  knowledge_graph.rs  metadata.rs  mod.rs  pagination.rs  projects.rs  prompts.rs  providers.rs  rag.rs  realtime.rs  retrieve.rs  sql.rs  tables.rs  usage.rs  vectors.rs  webhooks.rs
src/auth/: api_key.rs  jwt.rs  mod.rs  password.rs  user.rs
src/cache/: mod.rs
src/cli/: commands.rs  mod.rs
src/db/: mod.rs  pool.rs
src/evaluation/: benchmarks.rs  datasets.rs  metrics.rs  mod.rs  report.rs  runner.rs
src/events/: mod.rs  types.rs  webhook_dispatcher.rs
src/rag/: chunking.rs  context.rs  embedding.rs  evaluation.rs  knowledge_graph.rs  mod.rs  reranking.rs  retrieval.rs
src/rest_gen/: mod.rs  query_builder.rs  schema.rs
src/server/: mod.rs  router.rs  websocket.rs
src/storage/: local.rs  mod.rs
src/vector/: collection.rs  mod.rs  search.rs
tests/: integration.rs
tests/api/: auth.rs  collections.rs  documents.rs  health.rs  keys.rs  mod.rs  projects.rs  prompts.rs  search.rs  tables.rs
tests/common/: client.rs  fixtures.rs  mod.rs
usecase/quicknote/: .env.example  index.html  package-lock.json  (+2 more)
web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+200 files in other folders)
