[package]
name = "devabase"
version = "0.1.0"
edition = "2021"
description = "Lightweight backend for RAG/LLM applications"
license = "MIT"
repository = "https://github.com/devabase/devabase"

[[bin]]
name = "devabase"
path = "src/main.rs"

[lib]
name = "devabase"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# HTTP client (for embedding providers)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# URL parsing
url = "2"

# Token counting
tiktoken-rs = "0.5"

# SQL parsing (for SQL editor validation)
sqlparser = "0.50"

# HMAC for webhook signatures
hmac = "0.12"

# Embedding
rust-bert = { version = "0.21", optional = true }

# File handling
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
pdf-extract = "0.7"

# UI templates
askama = "0.12"
rust-embed = { version = "8", features = ["compression"] }

[features]
default = []
local-embedding = ["rust-bert"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
